--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ h2{
     height: 180px; 
     text-align: center;
 }
-
+/*---no me funcionan las modificaciones de los botones del carrusel---*/
 .carousel button{
     color: #256030;
     margin-left:  60px;
@@ -414,7 +414,7 @@ h2{
     margin: 25px;
 
 }
-/*-------------PAGE CONTACTO-----*/
+/*-----PAGE CONTACTO-----*/
 
 .formulario{
     background-color: #ffffff;
@@ -475,7 +475,10 @@ h2{
     height: 139px;
     margin: 15px;
 }
-
+.pie div ul{
+    padding: 0px;
+    margin: 0px;
+}
 .pie div ul li a{
     font-size: 20px;
     margin: 12px;
@@ -483,32 +486,10 @@ h2{
     font-weight: 600;
     color: black;
 }
-.pie div a{
+.pie a{
     margin: 10px;
 }
 /*----------MEDIAS QUERIES-------*/
-@media screen and (max-width: 1100px) {
-    .fotos .fotos-contenedor{
-        grid-template-columns: repeat(2,1fr);
-        grid-auto-rows: 230px;
-    }
-    .fotos .fotos-contenedor .cuarta{
-        grid-row: span 2;
-    }
-}
-    
-
-
-/*---.fotos .fotos-contenedor .primera{
-    grid-column: span 2;
-}
-.fotos .fotos-contenedor .tercera{
-    grid-row: span 2;
-}
-.fotos .fotos-contenedor .sexta{
-    grid-column: span 2;
-    grid-row: span 2;---*/
-
 
 @media screen and (max-width: 1150px) {
     .propuestas-contenedor-uno{
@@ -524,7 +505,15 @@ h2{
         margin-bottom: 70px;
     }
 }
-    
+@media screen and (max-width: 1100px) {
+    .fotos .fotos-contenedor{
+        grid-template-columns: repeat(2,1fr);
+        grid-auto-rows: 230px;
+    }
+    .fotos .fotos-contenedor .cuarta{
+        grid-row: span 2;
+    }
+} 
 @media screen and (max-width: 990px) {
     .hero h1{
         font-size: 25px;
@@ -583,8 +572,8 @@ h2{
         height: 129px;
     }
     .propuestas img{
-        width: 425px;
-        height: 300px;
+        width: 250px;
+        height: 200px;
     }
     .propuestas h1{
         font-size: 30px;
