--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,9 +19,9 @@ h2 {
   padding: 10px; }
 
 P {
-  color: black;
   font-family: 'Ysabeau', sans-serif;
   font-weight: 600;
+  color: black;
   font-size: 20px;
   text-align: center; }
 
@@ -47,6 +47,7 @@ P {
   color: #256030;
   font-family: 'Ysabeau', sans-serif;
   font-weight: 600;
+  font-size: 16px;
   padding: 10px;
   border-radius: 4px; }
 
@@ -177,25 +178,11 @@ P {
   flex-direction: column; }
   .testimonios h2 {
     font-size: 30px; }
-  .testimonios div .carousel-inner div {
-    width: 100%; }
-    .testimonios div .carousel-inner div p {
-      width: 250px;
-      margin-left: 50px;
-      margin-right: 50px;
-      margin-bottom: 0px; }
-  .testimonios div .carousel-control-prev {
-    width: 40px;
+  .testimonios .carousel .carousel-inner .carousel-item {
+    transition: 1s; }
+  .testimonios .carousel .carousel-inner div p {
+    width: 250px;
     height: 150px; }
-    .testimonios div .carousel-control-prev .carousel-control-prev-icon {
-      width: 2rem;
-      height: 2rem; }
-  .testimonios div .carousel-control-next {
-    width: 40px;
-    height: 150px; }
-    .testimonios div .carousel-control-next .carousel-control-next-icon {
-      width: 2rem;
-      height: 2rem; }
 
 .propuestas h1 {
   font-family: 'Ysabeau', sans-serif;
@@ -208,45 +195,51 @@ P {
 .propuestas .propuestas-contenedor-uno {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  margin: 25px; }
   .propuestas .propuestas-contenedor-uno div {
     text-align: center; }
     .propuestas .propuestas-contenedor-uno div p {
-      padding: 10px;
+      padding: 20px;
       margin-bottom: 20px; }
     .propuestas .propuestas-contenedor-uno div a {
       transition: 1s; }
       .propuestas .propuestas-contenedor-uno div a:hover {
-        transform: scale(1.2); }
+        background-color: #c2c5aa;
+        color: #256030; }
 
 .propuestas .propuestas-contenedor-dos {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row-reverse; }
+  flex-direction: row-reverse;
+  margin: 25px; }
   .propuestas .propuestas-contenedor-dos div {
     text-align: center; }
     .propuestas .propuestas-contenedor-dos div p {
-      padding: 10px;
+      padding: 20px;
       margin-bottom: 20px; }
     .propuestas .propuestas-contenedor-dos div a {
       transition: 1s; }
       .propuestas .propuestas-contenedor-dos div a:hover {
-        transform: scale(1.2); }
+        background-color: #c2c5aa;
+        color: #256030; }
 
 .propuestas .propuestas-contenedor-tres {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  margin: 25px; }
   .propuestas .propuestas-contenedor-tres div {
     text-align: center; }
     .propuestas .propuestas-contenedor-tres div p {
-      padding: 10px;
+      padding: 20px;
       margin-bottom: 20px; }
     .propuestas .propuestas-contenedor-tres div a {
       transition: 1s; }
       .propuestas .propuestas-contenedor-tres div a:hover {
-        transform: scale(1.2); }
+        background-color: #c2c5aa;
+        color: #256030; }
 
 .servicios h1 {
   font-family: 'Ysabeau', sans-serif;
@@ -268,9 +261,13 @@ P {
     .servicios .contenedor-uno ul li {
       font-family: 'Ysabeau', sans-serif;
       font-weight: 600;
+      color: #000000;
       font-size: 20px;
       margin-left: 35px;
-      list-style-image: url("../img/iconol-lista.png"); }
+      list-style-image: url("../img/iconol-lista.png");
+      transition: 1s; }
+      .servicios .contenedor-uno ul li:hover {
+        transform: scale(1.2); }
 
 .servicios h2 {
   margin-top: 30px; }
@@ -288,9 +285,13 @@ P {
     .servicios .contenedor-dos ul li {
       font-family: 'Ysabeau', sans-serif;
       font-weight: 600;
+      color: #000000;
       font-size: 20px;
       margin-left: 35px;
-      list-style-image: url("../img/iconol-lista.png"); }
+      list-style-image: url("../img/iconol-lista.png");
+      transition: 1s; }
+      .servicios .contenedor-dos ul li:hover {
+        transform: scale(1.2); }
 
 .servicios .contenedor-tres {
   display: flex;
@@ -304,9 +305,13 @@ P {
     .servicios .contenedor-tres ul li {
       font-family: 'Ysabeau', sans-serif;
       font-weight: 600;
+      color: #000000;
       font-size: 20px;
       margin-left: 35px;
-      list-style-image: url("../img/icono-lista-pendiente.png"); }
+      list-style-image: url("../img/icono-lista-pendiente.png");
+      transition: 1s; }
+      .servicios .contenedor-tres ul li:hover {
+        transform: scale(1.2); }
 
 .fotos {
   margin-top: 50px;
@@ -366,7 +371,8 @@ P {
     margin: 25px;
     transition: 1s; }
     .ubicacion .mapa a:hover {
-      transform: scale(1.2); }
+      background-color: #c2c5aa;
+      color: #256030; }
 
 .formulario h1 {
   font-family: 'Ysabeau', sans-serif;
@@ -381,7 +387,7 @@ P {
   font-size: 25px; }
 
 .formulario .formulario-contenedor h2 {
-  font-size: 40px;
+  font-size: 30px;
   padding: 10px; }
 
 .formulario .formulario-contenedor .primero {
@@ -410,6 +416,8 @@ P {
   justify-content: center;
   align-items: center;
   flex-direction: column; }
+  .formulario .formulario-contenedor .segundo h2 {
+    font-size: 25px; }
   .formulario .formulario-contenedor .segundo div input {
     font-family: 'Ysabeau', sans-serif;
     font-weight: 600;
@@ -452,13 +460,13 @@ P {
 @media screen and (max-width: 1150px) {
   .propuestas .propuestas-contenedor-uno {
     flex-direction: column-reverse;
-    margin-bottom: 70px; }
+    margin-bottom: 50px; }
   .propuestas .propuestas-contenedor-dos {
     flex-direction: column-reverse;
-    margin-bottom: 70px; }
+    margin-bottom: 50px; }
   .propuestas .propuestas-contenedor-tres {
     flex-direction: column-reverse;
-    margin-bottom: 70px; } }
+    margin-bottom: 50px; } }
 
 @media screen and (max-width: 1100px) {
   .fotos .fotos-contenedor {
@@ -529,27 +537,45 @@ P {
       margin: 5px; }
   .propuestas h1 {
     font-size: 30px; }
-  .propuestas .propuestas-contenedor-uno div h2 {
-    font-size: 23px; }
-  .propuestas .propuestas-contenedor-uno div p {
-    font-size: 15px; }
-  .propuestas .propuestas-contenedor-uno img {
-    width: 250px;
-    height: 200px; }
-  .propuestas .propuestas-contenedor-dos div h2 {
-    font-size: 23px; }
-  .propuestas .propuestas-contenedor-dos div p {
-    font-size: 15px; }
-  .propuestas .propuestas-contenedor-dos img {
-    width: 250px;
-    height: 200px; }
-  .propuestas .propuestas-contenedor-tres div h2 {
-    font-size: 23px; }
-  .propuestas .propuestas-contenedor-tres div p {
-    font-size: 15px; }
-  .propuestas .propuestas-contenedor-tres img {
-    width: 250px;
-    height: 200px; }
+  .propuestas .propuestas-contenedor-uno {
+    margin-bottom: 20px; }
+    .propuestas .propuestas-contenedor-uno div h2 {
+      font-size: 23px; }
+    .propuestas .propuestas-contenedor-uno div p {
+      font-size: 15px;
+      padding: 10px; }
+    .propuestas .propuestas-contenedor-uno div a {
+      font-size: 12px;
+      padding: 8px; }
+    .propuestas .propuestas-contenedor-uno img {
+      width: 250px;
+      height: 200px; }
+  .propuestas .propuestas-contenedor-dos {
+    margin-bottom: 20px; }
+    .propuestas .propuestas-contenedor-dos div h2 {
+      font-size: 23px; }
+    .propuestas .propuestas-contenedor-dos div p {
+      font-size: 15px;
+      padding: 10px; }
+    .propuestas .propuestas-contenedor-dos div a {
+      font-size: 12px;
+      padding: 8px; }
+    .propuestas .propuestas-contenedor-dos img {
+      width: 250px;
+      height: 200px; }
+  .propuestas .propuestas-contenedor-tres {
+    margin-bottom: 20px; }
+    .propuestas .propuestas-contenedor-tres div h2 {
+      font-size: 23px; }
+    .propuestas .propuestas-contenedor-tres div p {
+      font-size: 15px;
+      padding: 10px; }
+    .propuestas .propuestas-contenedor-tres div a {
+      font-size: 12px;
+      padding: 8px; }
+    .propuestas .propuestas-contenedor-tres img {
+      width: 250px;
+      height: 200px; }
   .fotos .fotos-contenedor {
     display: flex;
     flex-direction: column;
