--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -31,6 +31,7 @@ $colores:
     color: nth($colores, 1);
     font-family: 'Ysabeau', sans-serif;
     font-weight: 600;
+    font-size: 16px;
     padding: 10px;
     border-radius: 4px;
 }
